--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "demo": "npx rollup -c -w"
+    "demo": "npx rollup -c -w",
+    "prettier": "npx prettier src/* --write",
+    "lint": "npx eslint src/* --fix"
   },
   "keywords": [
     "keyboard"
@@ -16,6 +18,14 @@
     "@babel/core": "^7.17.5",
     "@babel/preset-env": "^7.16.11",
     "@rollup/plugin-babel": "^5.3.0",
+    "eslint": "^8.9.0",
+    "eslint-config-prettier": "^8.4.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "prettier": "^2.5.1",
+    "prettier-eslint": "^13.0.0",
     "rollup": "^2.67.3",
     "rollup-plugin-filesize": "^9.1.2",
     "rollup-plugin-livereload": "^2.0.5",
