--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "demo": "npx rollup -c -w",
-    "prettier": "npx prettier src/* --write",
+    "prettier": "npx prettier * --write",
     "lint": "npx eslint src/* --fix"
   },
   "keywords": [
