--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "lint": "npx eslint src/* --fix"
   },
   "keywords": [
-    "keyboard"
+    "keyboard",
+    "keyboardevent",
+    "shortcut",
+    "hotkey",
+    "event",
+    "keydown",
+    "keyup",
+    "library "
   ],
-  "author": "",
+  "author": "Yukiniro",
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.17.5",
@@ -24,6 +31,7 @@
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.0.0",
+    "jest": "^27.5.1",
     "prettier": "^2.5.1",
     "prettier-eslint": "^13.0.0",
     "rollup": "^2.67.3",
