--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "toukey is a Javascript library for keyboard shortcuts",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "demo": "npx rollup -c -w",
     "prettier": "npx prettier * --write",
-    "lint": "npx eslint src/* --fix"
+    "lint": "npx eslint src/* --fix",
+    "test": "jest"
   },
   "keywords": [
     "keyboard",
@@ -23,6 +23,7 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.17.5",
+    "@babel/plugin-transform-modules-commonjs": "^7.16.8",
     "@babel/preset-env": "^7.16.11",
     "@rollup/plugin-babel": "^5.3.0",
     "eslint": "^8.9.0",
