chore: import bittydash
- change unit test
- change export config

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "toukey",
   "version": "1.0.5",
   "description": "Toukey is a Javascript library for keyboard shortcuts",
-  "main": "index.js",
+  "main": "dist/toukey.cjs.js",
+  "module": "dist/toukey.esm.js",
   "scripts": {
     "build:dev": "npx rollup -c rollup.config.dev.js",
     "build:prod": "npx rollup -c rollup.config.prod.js",
@@ -38,6 +39,9 @@
     "@babel/plugin-transform-modules-commonjs": "^7.16.8",
     "@babel/preset-env": "^7.16.11",
     "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^21.0.3",
+    "@rollup/plugin-node-resolve": "^13.2.0",
+    "bittydash": "^0.0.11",
     "c8": "^7.11.0",
     "eslint": "^8.9.0",
     "eslint-config-prettier": "^8.4.0",
