--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
   "compilerOptions": {
     "target": "ESNext",
     "declaration": true,
+    "outDir": "dist",
+    "declarationMap": true,
     "moduleResolution": "node"
   }
 }
