--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "toukey",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "description": "Toukey is a Javascript library for keyboard shortcuts",
   "main": "dist/toukey.cjs.js",
   "module": "dist/toukey.esm.js",
@@ -14,7 +14,8 @@
     "test": "npx vitest",
     "test:run": "npx vitest run",
     "test:coverrage": "npx vitest --coverage",
-    "publish": "npm run build:all && npm publish"
+    "clear": "node scripts/clearDist.mjs",
+    "publish": "npm run test:run && npm run clear && npm run build:all && npm publish"
   },
   "keywords": [
     "keyboard",
