--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "toukey",
-  "version": "1.2.2",
+  "version": "1.2.3",
   "description": "Toukey is a Javascript library for keyboard shortcuts",
   "main": "dist/toukey.cjs.js",
   "module": "dist/toukey.esm.js",
-  "types": "dist",
+  "types": "dist/src/index.d.ts",
   "scripts": {
     "build:dev": "npx rollup -c rollup.config.dev.js",
     "build:prod": "npx rollup -c rollup.config.prod.js",
