--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "module": "dist/toukey.esm.js",
   "types": "dist/src/index.d.ts",
   "scripts": {
-    "build:dev": "npx rollup -c rollup.config.dev.js",
-    "build:prod": "npx rollup -c rollup.config.prod.js",
+    "build:dev": "npx rollup -c rollup.config.dev.mjs",
+    "build:prod": "npx rollup -c rollup.config.prod.mjs",
     "build:all": "npm run build:dev && npm run build:prod",
     "prettier": "npx prettier * --write",
     "lint": "npx eslint src/* --fix",
@@ -41,10 +41,10 @@
     "@babel/core": "^7.17.5",
     "@babel/plugin-transform-modules-commonjs": "^7.16.8",
     "@babel/preset-env": "^7.16.11",
-    "@rollup/plugin-babel": "^6.0.0",
+    "@rollup/plugin-babel": "^6.0.3",
     "@rollup/plugin-commonjs": "^24.0.0",
     "@rollup/plugin-node-resolve": "^13.2.0",
-    "bittydash": "^0.5.0",
+    "bittydash": "^0.5.5",
     "c8": "^7.11.0",
     "eslint": "^8.9.0",
     "eslint-config-prettier": "^8.4.0",
@@ -52,19 +52,19 @@
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.0.0",
-    "happy-dom": "^8.0.0",
+    "happy-dom": "^8.1.0",
     "jest": "^27.5.1",
-    "jsdom": "^21.0.0",
+    "jsdom": "^21.1.1",
     "prettier": "^2.5.1",
     "prettier-eslint": "^13.0.0",
-    "rollup": "^2.67.3",
+    "rollup": "^3.19.1",
     "rollup-plugin-filesize": "^10.0.0",
     "rollup-plugin-livereload": "^2.0.5",
     "rollup-plugin-serve": "^1.1.0",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.34.0",
+    "rollup-plugin-typescript2": "^0.34.1",
     "tslib": "^2.4.0",
-    "typescript": "^5.0.0",
-    "vitest": "^0.29.0"
+    "typescript": "^5.0.2",
+    "vitest": "^0.29.3"
   }
 }
