--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,5 @@
 {
-  "extends": ["standard", "prettier"]
+  "parser": "@typescript-eslint/parser",
+  "extends": ["standard", "prettier", "plugin:@typescript-eslint/recommended"],
+  "plugins": ["@typescript-eslint"]
 }
