--- a/website/package.json
+++ b/website/package.json
@@ -1,6 +1,6 @@
 {
   "name": "website",
-  "version": "0.0.0",
+  "version": "1.2.6",
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
@@ -14,11 +14,11 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
-    "@mdx-js/react": "^2.0.0",
     "@docusaurus/core": "2.4.1",
     "@docusaurus/preset-classic": "2.4.1",
+    "@mdx-js/react": "1.6.22",
     "clsx": "^2.0.0",
-    "prism-react-renderer": "^2.0.0",
+    "prism-react-renderer": "^2.0.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
