--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "toukey",
   "version": "1.2.6",
   "description": "Toukey is a Javascript library for keyboard shortcuts",
-  "main": "dist/toukey.cjs.js",
-  "module": "dist/toukey.esm.js",
+  "main": "dist/toukey.min.cjs",
+  "module": "dist/toukey.min.mjs",
   "types": "dist/src/index.d.ts",
   "scripts": {
     "build:dev": "npx rollup -c rollup.config.dev.mjs",
@@ -37,6 +37,10 @@
     "type": "git",
     "url": "https://github.com/Yukiniro/toukey.git"
   },
+  "bugs": {
+    "email": "yukiniro@hotmail.com",
+    "url": "https://github.com/Yukiniro/toukey/issues"
+  },
   "devDependencies": {
     "@babel/core": "^7.17.5",
     "@babel/plugin-transform-modules-commonjs": "^7.16.8",
@@ -44,6 +48,7 @@
     "@rollup/plugin-babel": "^6.0.3",
     "@rollup/plugin-commonjs": "^25.0.0",
     "@rollup/plugin-node-resolve": "^13.2.0",
+    "@rollup/plugin-terser": "^0.4.4",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "bittydash": "^0.7.0",
@@ -61,7 +66,6 @@
     "rollup-plugin-filesize": "^10.0.0",
     "rollup-plugin-livereload": "^2.0.5",
     "rollup-plugin-serve": "^1.1.0",
-    "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.36.0",
     "tslib": "^2.4.0",
     "typescript": "^5.0.2",
