--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "toukey",
-  "version": "1.2.6",
+  "version": "1.3.0",
   "description": "Toukey is a Javascript library for keyboard shortcuts",
   "main": "dist/toukey.min.cjs",
   "module": "dist/toukey.min.mjs",
@@ -8,7 +8,6 @@
   "scripts": {
     "build:dev": "npx rollup -c rollup.config.dev.mjs",
     "build:prod": "npx rollup -c rollup.config.prod.mjs",
-    "build:all": "npm run build:dev && npm run build:prod",
     "prettier": "npx prettier src/**/*.ts playground/src/**/*.jsx  --write",
     "lint": "npx eslint src/* --fix",
     "zhlint": "npx zhlint README-zh.md",
@@ -16,7 +15,7 @@
     "test:run": "npx vitest run",
     "test:coverrage": "npx vitest --coverage",
     "clear": "node scripts/clearDist.mjs",
-    "npm:publish": "npm run test:run && npm run clear && npm run build:all && npm publish"
+    "npm:publish": "npm run test:run && npm run clear && npm run build:prod && npm publish"
   },
   "keywords": [
     "keyboard",
