--- a/package.json
+++ b/package.json
@@ -2,20 +2,21 @@
   "name": "toukey",
   "version": "1.3.0",
   "description": "Toukey is a Javascript library for keyboard shortcuts",
-  "main": "dist/toukey.min.cjs",
-  "module": "dist/toukey.min.mjs",
-  "types": "dist/src/index.d.ts",
+  "main": "dist/index.cjs",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
+  "type": "module",
   "scripts": {
-    "build:dev": "npx rollup -c rollup.config.dev.mjs",
-    "build:prod": "npx rollup -c rollup.config.prod.mjs",
+    "build": "unbuild",
     "prettier": "npx prettier src/**/*.ts playground/src/**/*.jsx  --write",
-    "lint": "npx eslint src/* --fix",
+    "lint": "eslint --cache --ext .ts,.js,.mjs,.cjs . && prettier -c src test",
+    "lint:fix": "eslint --cache --ext .ts,.js,.mjs,.cjs . --fix && prettier -c src test -w",
+    "prepack": "pnpm run build",
     "zhlint": "npx zhlint README-zh.md",
     "test": "npx vitest",
     "test:run": "npx vitest run",
     "test:coverrage": "npx vitest --coverage",
-    "clear": "node scripts/clearDist.mjs",
-    "npm:publish": "npm run test:run && npm run clear && npm run build:prod && npm publish"
+    "release": "pnpm test && changelogen --release && npm publish && git push --follow-tags"
   },
   "keywords": [
     "keyboard",
@@ -30,6 +31,13 @@
   "files": [
     "dist"
   ],
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.cjs"
+    }
+  },
   "author": "Yukiniro",
   "license": "MIT",
   "homepage": "https://github.com/Yukiniro/toukey",
@@ -42,33 +50,17 @@
     "url": "https://github.com/Yukiniro/toukey/issues"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.2",
-    "@babel/plugin-transform-modules-commonjs": "^7.23.0",
-    "@babel/preset-env": "^7.23.2",
-    "@rollup/plugin-babel": "^6.0.4",
-    "@rollup/plugin-commonjs": "^25.0.7",
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-terser": "^0.4.4",
-    "@typescript-eslint/eslint-plugin": "^6.9.0",
-    "@typescript-eslint/parser": "^6.9.0",
-    "bittydash": "^0.7.1",
+    "@types/node": "^20.10.3",
+    "@vitest/coverage-v8": "^1.0.1",
+    "changelogen": "^0.5.5",
     "c8": "^8.0.1",
     "eslint": "^8.52.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-import": "^2.29.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.1.1",
+    "eslint-config-unjs": "^0.2.1",
+    "jiti": "^1.21.0",
     "happy-dom": "^12.10.1",
-    "prettier": "^3.0.3",
-    "prettier-eslint": "^16.1.1",
-    "rollup": "^4.1.4",
-    "rollup-plugin-filesize": "^10.0.0",
-    "rollup-plugin-livereload": "^2.0.5",
-    "rollup-plugin-serve": "^3.0.0",
-    "rollup-plugin-typescript2": "^0.36.0",
-    "tslib": "^2.6.2",
+    "prettier": "^3.1.0",
     "typescript": "^5.2.2",
+    "unbuild": "^2.0.0",
     "vitest": "^1.0.0",
     "zhlint": "^0.7.1"
   }
